fix(faq): adjust content padding on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2607,6 +2607,6 @@ table tbody td {
    }
 
   .accordion-content .faq-item {
-    padding: 2rem 4rem;
+    padding: 2rem;
   }
  }
